plugins {
  id 'org.springframework.boot' version '3.3.5' apply false
  id 'java'
}

allprojects {
  apply plugin: 'java'

  targetCompatibility = 1.21
  sourceCompatibility = 1.21

  repositories {
    mavenCentral()
  }
}
